# ece2400-sec08-2025

./: CMakeLists.txt
eval/: CMakeLists.txt  slist-int-eval.cc  slist-int-reverse-eval.cc
scripts/: eval.sh  slist-int-plot.py  slist-int-reverse-v1-plot.py  slist-int-reverse-v1-v2-plot.py  slist-int-reverse-v2-plot.py  slist-plot-all.py
src/: CMakeLists.txt  SListInt.cc  SListInt.h  slist-int-adhoc
test/: CMakeLists.txt  slist-int-directed-test.cc
